--- a/index.html
+++ b/index.html
@@ -48,27 +48,27 @@
             </li>
           </ul>
           <form class="d-flex boton-search" role="search">
-            <input class="form-control me-2 boton-search" type="search" placeholder="Search" aria-label="Search" />
-            <button class="btn btn-outline-success boton-search" type="submit">Search</button>
+            <input class="form-control me-2 buscador" type="search" placeholder="Search" aria-label="Search" />
+            <button class="btn btn-outline-success boton-secundario" type="submit">Search</button>
           </form>
         </div>
       </div>
     </nav>
   </header>
   <main>
-    <div class="card text-bg-dark mb-5">
-      <img src="./assets/banner TreeTale.png" class="imagen-banner" alt="treeclimber_image">
-      <div class="card-img-overlay">
-        <h1 class="card-title">Historias, saberes y herramientas para quienes cuidan los árboles del mundo.</h1>
-        <p class="card-text">Explora, aprende y conéctate con una comunidad global.</p>
+    <div class="card text-bg-dark mb-5 banner-estilo-jesu">
+      <img src="./assets/banner-gradiente-index.png" class="imagen-banner" alt="arborista trepando un arbol, de fondo un parque público, luz calida">
+      <div class="card-img-overlay texto-card-banner">
+        <h1 class="card-title">Historias, saberes y herramientas para quienes cuidan los árboles del mundo</h1>
       </div>
     </div>
-    <!-- esto de abajo hace referencia a la pestaña worklife. Ambas cosas las meti en un div, ver si esta bien o si no sacarlo-->
+    
     <div>
+      <h2 class="card-text text-center">Explora, aprende y conéctate con una comunidad global.</h2>
       <p class="text-center">Recibe contenido seleccionado, herramientas útiles y lo mejor del mundo arborista
         directamente en tu correo.</p>
       <div class="d-grid gap-2 col-6 mx-auto">
-        <button class="btn btn-primary w-50 mx-auto" type="button">Unirme a la comunidad</button>
+        <button class="btn btn-primary w-50 mx-auto boton-primario" type="button">Unirme a la comunidad</button>
       </div>
     </div>
 
